main.css
@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");

:root {
  box-sizing: border-box;

  --main-font: Inter, sans-serif;
  --content-font: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
    Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
  --main-color: white;
}

*,
*::before,
*::after {
  box-sizing: inherit;
}

body {
  margin: 0px;
  height: 100vh;
  font-family: var(--content-font);
  font-size: 16px;

  display: grid;
  grid-template-rows: auto 13fr;
  grid-template-columns: 1fr 5fr;
  overflow: auto;
}

.sidebar {
  background-color: #58aff7;
  color: rgb(255, 255, 255);
  padding: 8px;
  padding-left: 32px;
  font-family: var(--main-font);
  font-weight: 600;
  font-size: 1.2rem;

  grid-row: 1 / span 2;

  display: grid;
  grid-template: auto auto auto / 1fr;
  align-content: start;
  gap: 56px;
}

.sidebar > ul {
  padding: 0;
  margin: 0;
}

.logo {
  display: grid;
  grid-auto-flow: column;
  justify-content: start;
  align-items: center;
  gap: 1rem;
  font-size: 2rem;
}

.logo svg {
  height: 3rem;
  width: 3rem;
}

.sidebar li {
  list-style-type: none;
  display: grid;
  grid-auto-flow: column;
  justify-content: start;
  align-items: center;
  gap: 0.5rem;

  fill: white;
}

.sidebar li + li {
  margin-top: 2rem;
}

.icon {
  display: inline-block;
  height: 1.2rem;
  width: 1.2rem;
  margin-right: 0.5rem;
  background-color: #fff;
}

svg {
  height: 1.5rem;
}

header,
.profile-bar {
  padding: 8px 56px;
}

header {
  background-color: white;
  gap: 16px;

  display: grid;
  grid-template: auto / auto 1fr auto auto auto;
  align-items: center;
  justify-content: start;
}

header > *:nth-child(1n + 3) {
  justify-self: end;
}

header h4 {
  margin: 0;
}

input {
  border: none;
  width: 80%;
  padding: 8px 16px;
  border-radius: 16px;
  background-color: #d4d4d4;
}

header .icon {
  border: 2px solid rgb(36, 36, 36);
  background-color: transparent;
}

main {
  background-color: rgb(236, 236, 236);

  display: grid;
  grid-template: auto auto 1fr / 3fr 1fr;
  grid-template-areas:
    "profile-bar profile-bar"
    "projects announcements"
    "projects trending";
}

.profile-bar {
  background-color: white;
  grid-area: profile-bar;

  display: grid;
  align-items: center;
  grid-template-columns: auto 1fr auto auto auto;
  gap: 32px;
}

.large-profile {
  height: 4rem;
  width: 4rem;
  border-radius: 50%;
  background-color: #949494;
}

.user-name {
  margin: 0;
}

.profile-bar p {
  margin: 0;
}

.profile-bar button {
  height: 2.2rem;
  width: 5.5rem;
  color: white;
  font-size: 16px;
  font-weight: 600;
  font-family: var(--main-font);
  background-color: #58aff7;
  border: none;
  border-radius: 1.1rem;
}

.projects,
.announcements,
.trending {
  padding: 40px 16px;
}

.projects {
  grid-area: projects;
  padding-left: 48px;

  display: grid;
  grid-template: auto 1fr 1fr 1fr / repeat(auto-fit, minmax(300px, 1fr));
  row-gap: 32px;
  column-gap: 48px;
}

main > div > h3 {
  grid-column: 1 / -1;
  margin: 0;
}

.project {
  background-color: #fff;
  border-radius: 8px;
  border-left: 8px solid #f8a545;
  padding: 32px 16px 24px 24px;

  display: grid;
  grid-template-rows: auto 1fr auto;
  align-items: start;
}

.project > * {
  margin: 0px;
}

.project svg {
  margin-right: 16px;
}

.icon-container {
  align-self: end;
  justify-self: end;
}

.icon-container .icon {
  margin-right: 24px;
}

.announcements {
  grid-area: announcements;

  display: grid;
  grid-template-rows: auto 1fr;
  row-gap: 16px;
}

.announcement-container,
.trending-container {
  background-color: #fff;
  border-radius: 8px;
  padding: 16px 24px;

  display: grid;
}

.announcement > p {
  margin-top: 4px;
  font-size: 13px;
}

.announcement + .announcement {
  border-top: 2px solid rgb(204, 204, 204);
}

h4 {
  margin-bottom: 0px;
}

.trending {
  padding-top: 0px;
  grid-area: trending;

  display: grid;
  grid-template-rows: auto 1fr;
  grid-template-columns: 1fr;
  row-gap: 16px;
}

.trending-project {
  display: grid;
  grid-template: auto auto / auto 1fr;
  align-content: center;
  justify-items: start;
  column-gap: 16px;
}

.trending-container {
  row-gap: 16px;
}

.profile {
  height: 3rem;
  width: 3rem;
  border-radius: 50%;
  background-color: #949494;
}

.trending-project .profile {
  grid-row: 1/3;
}

.trending-project > p,
.trending-project > h4 {
  margin: 0;
}

